<resources>
    <string name="app_name">ActyxOS</string>
    <string name="app_icon_description">ActyxOS App Icon</string>
    <string name="action_settings">Settings</string>
    <string name="background_services_name">ActyxOS</string>
    <string name="background_services_operational_text">ActyxOS is operational.</string>
    <string name="background_services_misconfigured_text">ActyxOS is misconfigured.</string>
    <string name="background_services_channel_name">ActyxOS</string>
    <string name="background_services_channel_description">TODO</string>
    <string name="warning_icon_description">Warning</string>
    <string name="placeholder">placeholder</string>
    <string name="initializing">Initializing</string>
    <string name="invalid_settings_msg">Unfortunately, this app can not be started as it does not have valid settings. Please contact your administrator.</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="apps">Apps</string>
    <string name="system_info">System Info</string>
    <string name="actyx_contact_email">info@actyx.com</string>
    <string name="create_home_screen_icon">Create home screen icon</string>
    <string name="open">Open</string>
    <string name="app_details">App details</string>
    <string name="console">Console</string>
    <string name="connected_peers">Connected peers</string>
    <string name="bandwidth_usage">Bandwidth usage</string>
    <string name="ipfs_storage">IPFS storage</string>
    <string name="please_select_an_app_from_the_list_or_deploy_one">Please select an app from the list or deploy one.</string>
    <string name="actyx_ag">Actyx AG</string>
    <string name="stop_actyxos">Stop ActyxOS</string>
    <string name="contact">Contact</string>
    <string name="contact_actyx_io">contact@actyx.io</string>
    <string name="www_actyx_com">www.actyx.com</string>
    <string name="website">Website</string>
    <string name="details">Details</string>
    <string name="license_agreement">License Agreement</string>
    <string name="app_version">App Version</string>
    <string name="website_icon">website_icon</string>
    <string name="details_icon">details_icon</string>
    <string name="email_icon">email icon</string>
    <string name="actyxos_logo">ActyxOS Logo</string>
    <string name="compatibility">Compatibility</string>
    <string name="version_unknown">unknown</string>
    <string name="device">Device</string>
    <string name="ip_address">IP Address</string>
    <string name="serial_number">Serial Number</string>
    <string name="actyx_os">Actyx OS</string>
    <string name="swarm_name">Swarm Name</string>
    <string name="connected_peers_2">Connected Peers</string>
    <string name="ipfs_statistics">IPFS Statistics</string>
    <string name="developer_console">Developer Console</string>
    <string name="bandwidth_usage_2">Bandwidth Usage</string>
    <string name="device_source_id">Device Source ID</string>
    <string name="application">Application</string>
    <string name="connectivity">connectivity</string>
    <string name="type">type</string>
    <string name="navigate_next">navigate next</string>
    <string name="coming_soon">Coming soon!</string>
    <string name="_continue">continue</string>
    <string name="cancel">cancel</string>
    <string name="notification_error_ssl_date_invalid">The date of the SSL certificate issued by "%1$s" is invalid.</string>
    <string name="notification_error_ssl_expired">The SSL certificate issued by "%1$s" is invalid because it is expired.</string>
    <string name="notification_error_ssl_idmismatch">The SSL certificate issued by "%1$s" is invalid because the hostname doesn\'t match.</string>
    <string name="notification_error_ssl_invalid">The SSL certificate issued by "%1$s" is invalid.</string>
    <string name="notification_error_ssl_not_yet_valid">The SSL certificate issued by "%1$s" is not yet valid.</string>
    <string name="notification_error_ssl_untrusted">The SSL certificate issued by "%1$s" is invalid because the certificate authority is not trusted.</string>
</resources>
