<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_system_info"
    app:startDestination="@id/appsFragment">

    <fragment
        android:id="@+id/systemInfoFragment"
        android:name="com.actyx.os.android.activity.systeminfoscreens.SystemInfoFragment"
        android:label="@string/system_info"
        tools:layout="@layout/fragment_system_info">
        <action
            android:id="@+id/action_systemInfoFragment_to_bandwidthUsageFragment"
            app:destination="@id/bandwidthUsageFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />

        <action
            android:id="@+id/action_systemInfoFragment_to_ipfsStorageFragment"
            app:destination="@id/ipfsStorageFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />

        <action
            android:id="@+id/action_systemInfoFragment_to_consoleFragment"
            app:destination="@id/consoleFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />

        <action
            android:id="@+id/action_systemInfoFragment_to_connectedPeersFragment"
            app:destination="@id/connectedPeersFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />

    </fragment>
    <fragment
        android:id="@+id/bandwidthUsageFragment"
        android:name="com.actyx.os.android.activity.systeminfoscreens.BandwidthUsageFragment"
        android:label="@string/bandwidth_usage"
        tools:layout="@layout/fragment_bandwidth_usage" />
    <fragment
        android:id="@+id/connectedPeersFragment"
        android:name="com.actyx.os.android.activity.systeminfoscreens.ConnectedPeersFragment"
        android:label="@string/connected_peers"
        tools:layout="@layout/fragment_connected_peers" />
    <fragment
        android:id="@+id/consoleFragment"
        android:name="com.actyx.os.android.activity.systeminfoscreens.ConsoleFragment"
        android:label="@string/console"
        tools:layout="@layout/fragment_console" />
    <fragment
        android:id="@+id/ipfsStorageFragment"
        android:name="com.actyx.os.android.activity.systeminfoscreens.IpfsStorageFragment"
        android:label="@string/ipfs_storage"
        tools:layout="@layout/fragment_ipfs_storage" />
    <fragment
        android:id="@+id/appsFragment"
        android:name="com.actyx.os.android.activity.appsscreens.AppsFragment"
        android:label="@string/apps"
        tools:layout="@layout/fragment_apps">
        <action
            android:id="@+id/action_appsFragment_to_systemInfoFragment"
            app:destination="@id/systemInfoFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />

        <action
            android:id="@+id/action_appsFragment_to_appInfoFragment"
            app:destination="@id/appInfoFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />

    </fragment>
    <fragment
        android:id="@+id/appInfoFragment"
        android:name="com.actyx.os.android.activity.appsscreens.AppInfoFragment"
        android:label="@string/app_details"
        tools:layout="@layout/fragment_app_info" />
</navigation>