<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="50.4dp"
        android:layout_height="50.4dp"
        android:layout_marginStart="20.7dp"
        android:layout_marginTop="20.7dp"
        android:contentDescription="@string/actyxos_logo"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/ic_actyxos"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="46dp" />


    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="11.7dp"
        android:text="@string/app_name"
        android:textColor="@color/font_black"
        android:textSize="15.3sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline4"
        app:layout_constraintStart_toEndOf="@+id/imageView" />

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/actyx_ag"
        android:textColor="@color/font_grey"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toTopOf="@+id/guideline4" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="31.5dp"
        android:text="@string/contact"
        android:textColor="@color/font_grey_label"
        android:textSize="12.6sp"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/website"
        android:textColor="@color/font_grey_label"
        android:textSize="12.6sp"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/divider2" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="22.5dp"
        android:text="@string/license_agreement"
        android:textColor="@color/font_grey_label"
        android:textSize="12.6sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/divider" />

    <com.actyx.os.android.activity.systeminfoscreens.TextWithIcon
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10.35dp"
        android:src="@drawable/ic_email_black_24dp"
        android:text="@string/contact_actyx_io"
        app:layout_constraintBottom_toBottomOf="@+id/textView"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="@+id/textView" />


    <com.actyx.os.android.activity.systeminfoscreens.TextWithIcon
        android:id="@+id/www"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10.35dp"
        android:src="@drawable/ic_computer_black_24dp"
        android:text="@string/www_actyx_com"
        app:layout_constraintBottom_toBottomOf="@+id/textView5"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="@+id/textView5" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <View
        android:id="@+id/divider2"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="15.3dp"
        android:layout_marginEnd="10.35dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <View
        android:id="@+id/divider"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="10.35dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <View
        android:id="@+id/divider3"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginStart="10.35dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toBottomOf="@+id/divider2"
        app:layout_constraintEnd_toEndOf="@+id/stop_actyx_os"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="@+id/divider2" />

    <View
        android:id="@+id/divider4"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginStart="10.35dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toBottomOf="@+id/divider"
        app:layout_constraintEnd_toEndOf="@+id/stop_actyx_os"
        app:layout_constraintStart_toStartOf="@+id/guideline2" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/stop_actyx_os"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="31.5dp"
        android:layout_marginEnd="44.1dp"
        android:backgroundTint="@color/button_red"
        android:text="@string/stop_actyxos"
        android:textAllCaps="false"
        android:textSize="12sp"
        app:cornerRadius="1.8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.actyx.os.android.activity.systeminfoscreens.TextWithIcon
        android:id="@+id/license"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10.35dp"
        android:src="@drawable/ic_insert_drive_file_black_24dp"
        android:text="@string/details"
        app:layout_constraintBottom_toBottomOf="@+id/textView7"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="@+id/textView7" />

    <com.actyx.os.android.activity.systeminfoscreens.LabelWithText
        android:id="@+id/applicationAppVersionText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10.35dp"
        app:label="@string/app_version"
        app:layout_constraintBottom_toBottomOf="@+id/email"
        app:layout_constraintEnd_toEndOf="@+id/stop_actyx_os"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="@+id/email" />

    <com.actyx.os.android.activity.systeminfoscreens.LabelWithText
        android:id="@+id/applicationCompatibilityText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10.35dp"
        app:label="@string/compatibility"
        app:layout_constraintBottom_toBottomOf="@+id/www"
        app:layout_constraintEnd_toEndOf="@+id/stop_actyx_os"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="@+id/www" />

</androidx.constraintlayout.widget.ConstraintLayout>
