<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/imgActyxOsLogo"
        android:layout_width="50.4dp"
        android:layout_height="50.4dp"
        android:layout_marginStart="20.7dp"
        android:layout_marginTop="20.7dp"
        android:layout_marginBottom="21dp"
        android:contentDescription="@string/actyxos_logo"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/ic_actyxos"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="46dp" />


    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/labelActyxOS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="11.7dp"
        android:text="@string/app_name"
        android:textColor="@color/font_black"
        android:textSize="15.3sp"
        app:layout_constraintBottom_toTopOf="@+id/guidelineTop"
        app:layout_constraintStart_toEndOf="@+id/imgActyxOsLogo" />

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/actyx_ag"
        android:textColor="@color/font_grey"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/labelActyxOS"
        app:layout_constraintTop_toTopOf="@+id/guidelineTop" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/stop_actyx_os"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="21dp"
        android:layout_marginEnd="21dp"
        android:backgroundTint="@color/button_red"
        android:text="@string/stop_actyxos"
        android:textAllCaps="false"
        android:textSize="12sp"
        app:cornerRadius="1.8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>
