<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.actyx.os.android.activity.systeminfoscreens.LabelWithText
        android:id="@+id/deviceIpAddressText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="28.8dp"
        android:layout_marginEnd="10.35dp"
        app:label="@string/ip_address"
        app:layout_constraintEnd_toStartOf="@+id/guidelineDeviceCenter"
        app:layout_constraintStart_toStartOf="@+id/headerDevice"
        app:layout_constraintTop_toBottomOf="@+id/headerDevice" />


    <com.actyx.os.android.activity.systeminfoscreens.LabelWithText
        android:id="@+id/deviceSerialNumber"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15.3dp"
        app:label="@string/serial_number"
        app:layout_constraintEnd_toEndOf="@+id/deviceIpAddressText"
        app:layout_constraintStart_toStartOf="@+id/deviceIpAddressText"
        app:layout_constraintTop_toBottomOf="@+id/dividerIpAddress" />

    <com.actyx.os.android.activity.systeminfoscreens.LabelWithText
        android:id="@+id/deviceSourceIdText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15.3dp"
        android:layout_marginBottom="22.5dp"
        app:label="@string/device_source_id"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/deviceIpAddressText"
        app:layout_constraintStart_toStartOf="@+id/deviceIpAddressText"
        app:layout_constraintTop_toBottomOf="@+id/dividerSerialNumber" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineDeviceCenter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <View
        android:id="@+id/dividerIpAddress"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="15.3dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="@+id/deviceIpAddressText"
        app:layout_constraintStart_toStartOf="@+id/headerDevice"
        app:layout_constraintTop_toBottomOf="@+id/deviceIpAddressText" />

    <View
        android:id="@+id/dividerSerialNumber"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="15.3dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="@+id/deviceIpAddressText"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/headerDevice"
        app:layout_constraintTop_toBottomOf="@+id/deviceSerialNumber" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/headerDevice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="21dp"
        android:layout_marginTop="19.8dp"
        android:text="@string/device"
        android:textColor="@color/font_blue"
        android:textSize="9.9sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SmallSp" />


</androidx.constraintlayout.widget.ConstraintLayout>
